--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>hello</h1>
+    <header><h1>hello</h1></header>
+    <main>
+      <article class="weather-info">
+        <section id="currentWeather" class="weather-info__current"></section>
+        <section id="hourlyForecast" class="weather-info__hourly"></section>
+        <section id="dailyForecast" class="weather-info__daily"></section>
+      </article>
+    </main>
+    <footer>
+      <nav></nav>
+    </footer>
     <script src="./main.js"></script>
   </body>
 </html>
