Added cache-control and search section

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      http-equiv="Cache-Control"
+      content="no-cache, no-store, must-revalidate"
+    />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
     <title>Document</title>
   </head>
   <body>
@@ -13,6 +19,9 @@
         <section id="hourlyForecast" class="weather-info__hourly"></section>
         <section id="dailyForecast" class="weather-info__daily"></section>
       </article>
+      <section id="searchSection">
+        <input type="search" name="search" id="searchInput" />
+      </section>
     </main>
     <footer>
       <nav></nav>
